--- a/Lab4/swap.html
+++ b/Lab4/swap.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Swap</title>
-    <script src="./swap.js"></script>
+    <script src="./loc/swap.js"></script>
 </head>
 <body id="body">
     
